--- a/scss/style.css
+++ b/scss/style.css
@@ -20,7 +20,7 @@ body {
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   font-size: 15px;
-  color: white; }
+  color: #5c5c77; }
 
 p, .paragraph {
   font-weight: 400;
